# FlyHE

./: CMakeLists.txt  README.md
.github/workflows/: repo-stats.yml
LWE/cuTFHEpp/: CMakeLists.txt
LWE/cuTFHEpp/src/: CMakeLists.txt
LWE/cuTFHEpp/test/: CMakeLists.txt
LWE/examples/: CMakeLists.txt
RLWE/boot/: CMakeLists.txt
RLWE/boot/src/: CMakeLists.txt
RLWE/phantom/: CMakeLists.txt
RLWE/phantom/examples/: CMakeLists.txt
RLWE/phantom/src/: CMakeLists.txt
conversion/: CMakeLists.txt
examples/app/: CMakeLists.txt
examples/design/: CMakeLists.txt
examples/micobenchmark/: CMakeLists.txt
examples/moti/single/: CMakeLists.txt
sunnchioo/FlyHE/: README.md
sunnchioo/FlyHE/ghrs-data/: views_clones_aggregate.csv
sunnchioo/FlyHE/ghrs-data/snapshots/: 2025-12-19_063157_views_clones_series_fragment.csv  2025-12-20_014301_views_clones_series_fragment.csv  2025-12-21_015440_views_clones_series_fragment.csv  2025-12-22_015404_views_clones_series_fragment.csv  2025-12-23_014932_views_clones_series_fragment.csv  2025-12-24_014804_views_clones_series_fragment.csv  2025-12-25_014951_views_clones_series_fragment.csv  2025-12-26_014907_views_clones_series_fragment.csv  2025-12-27_014657_views_clones_series_fragment.csv  2025-12-28_020011_views_clones_series_fragment.csv  2025-12-29_015813_views_clones_series_fragment.csv  2025-12-30_015007_views_clones_series_fragment.csv  2025-12-31_015042_views_clones_series_fragment.csv  2026-01-01_020045_top_paths_snapshot.csv  (+28 more)
sunnchioo/FlyHE/latest-report/: report.html  report.md  report_for_pdf.html
